--- a/solution.html
+++ b/solution.html
@@ -50,13 +50,13 @@
 						<div class="12u$"><span class="image fit"><img src="images/ACW_Style_Tile.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
 						<div class="12u$"><p>The adjectives I aimed at visually describing were warm, inviting, trustworthy, communal, friendly, casual, and authentic. These adjectives would help a user feel welcome and would encourage them to trust ACW and join the network.
 						</p><p>
-							To support the adjectives, I chose the serif display type Minion Variable Concept. This type appears traditional and sophisticated and would replicate the logo type I chose. For the body copy and some second headlines, I chose the sans serif Monserrat because it is easy to read in large amounts and is laid-back feeling. The letterforms appear spacious and friendly.
+							To support the adjectives, I chose the sans-serif display type Benton Sans. This type appears simple and sophisticated. For the pairing type, I chose the serif Baskerville because it is simple and still more dynamic than the Benton Sans typeface.
 						</p><p>
 							 I want to use imagery with similar textures that has high contrast and shows people enjoying fellowship and community in homes.
 						</p>
-						<p>The color scheme is also aimed at feeling welcoming and warm: mainly neutrals with small touches of color in small elements to emphasize the Mission or unite the page.
+						<p>The color scheme is also aimed at feeling welcoming and warm-hearted. Mainly soft pop of colors because of his colors are very kid like and lively. The color will help empahize hierarchy within his website and brand.
 						</p>
-						<p>The style tile also showcases the new logo I designed for ACW to match their new, modern branding. I wanted the logo to be a timeless lockup that felt authentic and friendly.
+						<p>The style tile also showcases the new logo I designed for Bob Goff because he doesn't have one, which will be displayed at the top left corner. I wanted the logo to be connected with his concept of a journey and spreading the gospel around the world.
 						</p>
 						</div>
 					</div>
