--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Emma Marks| Process Site</title>
+		<title>Emma Marks | Process Site </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://use.typekit.net/qyl0nqi.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/custom.css" />
 	</head>
@@ -18,59 +19,59 @@
 			</header>
 
 		<!-- Nav -->
-		<nav id="menu">
-			<ul class="links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="elements.html">Useful Elements</a></li>
-				<li><a href="design-challenge.html">Design Challenge</a></li>
-				<li><a href="research.html">Research</a></li>
-				<li><a href="audience-and-goals.html">Audience and Goals</a></li>
-				<li><a href="solution.html">Solution</a></li>
-			</ul>
-		</nav>
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="design-challenge.html">Design Challenge</a></li>
+					<li><a href="research.html">Research</a></li>
+					<li><a href="audience-and-goals.html">Audience and Goals</a></li>
+					<li><a href="solution.html">Solution</a></li>
+				</ul>
+			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Love Does.</h1>
-					<ul class="actions">
-						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
-					</ul>
+					<h1>Website Redesign of</h1>
+					<img class="logo" src="images/ACW-logo.png"/>
+					<br></br>
+					<br></br>
 				</div>
 			</section>
 
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/bob-recklesslove.jpg" alt="" data-position="50% center" />
+					<img src="images/ACW-2.jpg" alt="" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
 							<h2><a href="design-challenge.html">Design Challenge</a></h2>
-					</header>
+						</header>
 						<p>Laying out the design challenge was the first step to truly getting to know my client Bob Goff. I accessed the IDEO Human Centered Design Toolkit to help guide me throught the design challenge process.</p>
 					<ul class="actions">
-							<li><a href="design-challenge.html" class="button alt">Read More</a></li>
-						</ul>
+						<li><a href="design-challenge.html" class="button alt">Read More</a></li>
+					</ul>
 				</div>
 				<div class="postnav">
-						<a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
-						<a href="#two" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
+					<a href="#one" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
+					<a href="#three" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 				</div>
 			</article>
 
 		<!-- Two -->
 			<article id="two" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="50% center" />
+					<img src="images/ACW-3.jpg" alt="" data-position="30% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
 							<h2><a href="research.html">Research</a></h2>
 						</header>
-						<p>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan.</p>
+						<p>I started conducting primary research on my client Bob Goff, and then secondry research on other organizations similar to Bob Goff's plan. I also interviewd users of his website.
+</p>
 						<ul class="actions">
 							<li><a href="research.html" class="button alt">Read More</a></li>
 						</ul>
@@ -83,16 +84,16 @@
 			</article>
 
 		<!-- Three -->
-			<article id="three" class="post style2">
+			<article id="three" class="post style1">
 				<div class="image">
-					<img src="images/bobgoff-balloons.jpg" alt="" data-position="30% center" />
+					<img src="images/ACW-4.jpg" alt="" data-position="50% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
 							<h2><a href="audience-and-goals.html">Audience &amp; Goals</a></h2>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>Knowing more information about my client and Sharing-economy from research, I was then able to identify two target audiences and develop a hierarchy of goals to meet the need of each audience.</p>
 						<ul class="actions">
 							<li><a href="audience-and-goals.html" class="button alt">Read More</a></li>
 						</ul>
@@ -105,33 +106,34 @@
 			</article>
 
 		<!-- Four -->
-			<article id="four" class="post invert style2 alt">
+			<article id="four" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="60% center" />
+					<img src="images/ACW-5.jpg" alt="" data-position="60% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
 							<h2><a href="solution.html">Solution</a></h2>
 						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
+						<p>The two audiences had different needs, which influenced the two designs for Call to Action. I also developed a style tile to demonstrate solutions for the font, color scheme, textures, and Call to Action buttons.</p>
 						<ul class="actions">
 							<li><a href="solution.html" class="button alt">Read More</a></li>
 						</ul>
 					</div>
 					<div class="postnav">
 						<a href="#three" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-						<a href="#five" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
+						<a href="#" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
 					</div>
 				</div>
 			</article>
 
 		<!-- Footer -->
-		<footer id="footer">
-			<div class="copyright">
-				&copy;2019 Emma Marks
-			</div>
-		</footer>
+			<footer id="footer">
+
+				<div class="copyright">
+					&copy;2019 Emma Marks.
+				</div>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -140,5 +142,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-	</body>
+	</body></article>
+
 </html>
