--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Website Redesign of</h1>
-					<img class="logo" src="images/ACW-logo.png"/>
+					<img class="logo" src="images/bobbw.jpg"/>
 					<br></br>
 					<br></br>
 				</div>
