--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Website Redesign of</h1>
+					<h1>Website Redesign of Bob Goff</h1>
 					<img class="logo" src="images/bobbw.jpg"/>
 					<br></br>
 					<br></br>
