--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/ACW-2.jpg" alt="" data-position="75% center" />
+					<img src="images/bobhp1.jpg" alt="" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -63,7 +63,7 @@
 		<!-- Two -->
 			<article id="two" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/ACW-3.jpg" alt="" data-position="30% center" />
+					<img src="images/bobhp2.jpg" alt="" data-position="30% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -86,7 +86,7 @@
 		<!-- Three -->
 			<article id="three" class="post style1">
 				<div class="image">
-					<img src="images/ACW-4.jpg" alt="" data-position="50% center" />
+					<img src="images/bobhp3.jpg" alt="" data-position="50% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
@@ -108,7 +108,7 @@
 		<!-- Four -->
 			<article id="four" class="post invert style1 alt">
 				<div class="image">
-					<img src="images/ACW-5.jpg" alt="" data-position="60% center" />
+					<img src="images/bobhp4.jpg" alt="" data-position="60% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
