--- a/solution.html
+++ b/solution.html
@@ -47,7 +47,7 @@
 					<h2>Style Tile</h2>
 					<div class="row 50% uniform">
 						<div class="12u1"><p>I created a style tile to help viewers understand the design vision for the website.</p></div>
-						<div class="12u$"><span class="image fit"><img src="images/BOBstyle10-20.pdf" alt="" style="border: 1px solid #cccccc;" /></span></div>
+						<div class="12u$"><span class="image fit"><img src="images/BOBstyle10-20.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
 						<div class="12u$"><p>The adjectives I aimed at visually describing were warm, inviting, trustworthy, communal, friendly, casual, and authentic. These adjectives would help a user feel welcome and would encourage them to trust ACW and join the network.
 						</p><p>
 							To support the adjectives, I chose the sans-serif display type Benton Sans. This type appears simple and sophisticated. For the pairing type, I chose the serif Baskerville because it is simple and still more dynamic than the Benton Sans typeface.
