--- a/solution.html
+++ b/solution.html
@@ -37,7 +37,7 @@
 					</header>
 					<h2>Call to action</h2>
 					<div class="row 50% uniform">
-						<div class="12u$"><span class="image left"><img src="images/ACW_Call_To_Action.jpg" alt="" /></span></div>
+						<div class="12u$"><span class="image left"><img src="images/banner.jpg" alt="" /></span></div>
 						<div class="12u$"><p>“Donate” is the call to action directed toward people who know information about the non-profit and Bob Goff himself and want to support the non-profit. Since there are 2 main audiences, people who do not know the brand and other who know the brand. One of the two main goals is to attract new members to the brand so they can learn new information and get to the point of where they can donate towards the non-profit. An attention demanding button saying “Donate” makes the navigation easy to accomplish the goal.
 						</p></div>
 						<p>The “Learn More" call to action would be right next to the donate button so they could see the ultimate goal for the brand. The “Learn More” call to action is for the members who want to connect with Bob Goff and understand who is his along with his mission. This call to action "Learn More" would allow easy access to getting to know the brand.
