--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<!-- Three -->
 			<article id="three" class="post style1">
 				<div class="image">
-					<img src="images/bobhp3.png" alt="" data-position="50% center" />
+					<img src="images/bobhp3.jpg" alt="" data-position="50% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
