type center change

--- a/audience-and-goals.html
+++ b/audience-and-goals.html
@@ -36,7 +36,7 @@
 					</div> -->
 					<header>
 						<h1>Audience and Goals</h1>
-						<p><center>After researching different aspects about Bob Goff's mission for his website, I developed goals for each of the audiences I identified earlier.<center></p>
+						<p>After researching different aspects about Bob Goff's mission for his website, I developed goals for each of the audiences I identified earlier.</p>
 					</header>
 					<h2>Audience</h2>
 					<p>To define and understand our audience better, we did an exercise where we brainstormed all the possible users for the website. We organized them into user groups. This would help us organize people groups and help us understand the user's goals later on.</p>
