--- a/research.html
+++ b/research.html
@@ -118,7 +118,7 @@
 			 <p><span class="image right"><img src="images/news1.jpg">
 				 	<span class="image left"><image src="images/news2.jpg">
 					<span class="image right"><image src="images/news3.jpg"></p><h3>Current News</h3>
- 					<p>When conducting my secondary research, I searched for news artcles talking about the needs of orphans and different companies trying to formulate a non-profit. It is honeslty sad how many different non-profit organzations are out there trying to help orphans.</p>
+ 					<p>When conducting my secondary research, I searched for news articles talking about the needs of orphans and different companies trying to formulate a non-profit. It is honeslty sad how many different non-profit organzations are out there trying to help orphans. Most of them do not dispaly clear direction on the non-profit nd how to donate or help the non-profit.</p>
  	 	<br></br>
  	 	<hr>
 
