--- a/audience-and-goals.html
+++ b/audience-and-goals.html
@@ -58,7 +58,7 @@
 
 					<hr>
 					<h3>Goals Summary</h3>
-					<p> </p>
+					<p>My goal was established after lots of research as well as learning which users are drawn towards Bob Goff as well as his brand. When learning my main audience, it was much easier to understand what users want and what users need. This section of audience and goals led me to formulating the call to actions for the new design.</p>
 
 			</section>
 
