--- a/solution.html
+++ b/solution.html
@@ -33,7 +33,7 @@
 				<div class="inner">
 					<header>
 						<h1>Solution</h1>
-						<p>After completing primary and secondary research, as well as conducting interviews, I was able to create two main call to actions.</p>
+						<p>After completing primary and secondary research, as well as conducting interviews, I was able to create two main call to actions and style tile.</p>
 					</header>
 					<h2>Call to action</h2>
 					<div class="row 50% uniform">
@@ -47,6 +47,8 @@
 					<h2>Style Tile</h2>
 					<div class="row 50% uniform">
 						<div class="12u1"><p>I created a style tile to help viewers understand the design vision for the website.</p></div>
+						<div class="12u$"><span class="image fit"><img src="images/BOBstyle.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
+						<div class="12u1"><p>I revised my style Tile to a more modern and to simplified form.</p></div>
 						<div class="12u$"><span class="image fit"><img src="images/BOBstyle10-21.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
 						<div class="12u$"><p>The adjectives I aimed at visually describing were warm, inviting, trustworthy, communal, friendly, casual, and authentic. These adjectives would help a user feel welcome and would encourage them to trust ACW and join the network.
 						</p><p>
