--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Emma Marks | Process Site </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="https://use.typekit.net/qyl0nqi.css">
+		<link rel="stylesheet" href="https://use.typekit.net/ovu5ire.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/custom.css" />
 	</head>
