--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
+					<h1>Website Redesign of Love Does</h1>
 					<br></br>
 					<br></br>
 				</div>
