--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Website Redesign of Love Does</h1>
+					<h1>Website Redesign of</h1>
+					<h1>Love Does</h1>
 					<br></br>
 					<br></br>
 				</div>
