--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Website Redesign of</h1>
-					<h1>Love Does</h1>
+					<h1>Bob Goff: Love Does</h1>
 					<br></br>
 					<br></br>
 				</div>
