--- a/solution.html
+++ b/solution.html
@@ -48,9 +48,9 @@
 					<div class="row 50% uniform">
 						<div class="12u1"><p>I created a style tile to help viewers understand the design vision for the website.</p></div>
 						<div class="12u$"><span class="image fit"><img src="images/BOBstyle.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
-						<div class="12u1"><p>I revised my style Tile to a more modern and to simplified form.</p></div>
+						<div class="12u1"><p>I revised my style tile to a more modern and simplified form.</p></div>
 						<div class="12u$"><span class="image fit"><img src="images/BOBstyle10-21.jpg" alt="" style="border: 1px solid #cccccc;" /></span></div>
-						<div class="12u$"><p>The adjectives I aimed at visually describing were warm, inviting, trustworthy, communal, friendly, casual, and authentic. These adjectives would help a user feel welcome and would encourage them to trust ACW and join the network.
+						<div class="12u$"><p>The adjectives I aimed at visually describing were love, passion, dreams, hope, and goals. These adjectives would help a user feel encouraged, empowered and to help the user fell like they can make an impact, which Bob Goff's ultimate goal with his brand.
 						</p><p>
 							To support the adjectives, I chose the sans-serif display type Benton Sans. This type appears simple and sophisticated. For the pairing type, I chose the serif Baskerville because it is simple and still more dynamic than the Benton Sans typeface.
 						</p><p>
